[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]

[project]
authors = [
  {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent"
]
dependencies = ["attrs", "eccodes", "pandas"]
description = "Pandas reader for the BUFR format using ecCodes."
dynamic = ["version"]
keywords = ["eccodes", "bufr", "pandas"]
license = {text = "Apache License Version 2.0"}
name = "pdbufr"
readme = "README.md"
requires-python = ">= 3.6"

[project.optional-dependencies]
tests = ["flake8", "pytest", "pytest-cov", "requests"]

[project.urls]
Documentation = "https://pdbufr.readthedocs.io/en/latest/"
Homepage = "https://github.com/ecmwf/pdbufr"

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D1", "D200", "D205", "D400", "D401", "D403"]
convention = "numpy"

[tool.setuptools_scm]
write_to = "src/pdbufr/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
